# program-creek

./: .gitignore  README.md  corpus.db  program-creek.cabal
.stack-work/install/x86_64-osx/lts-8.0/8.0.2/flag-cache/: attoparsec-0.13.1.0-HCAgpBrKCLJ5li8FbfXxE1  blaze-builder-0.4.0.2-CGB8BvrFgghHy5bLy0SFOg  blaze-textual-0.2.1.0-GUQiYWWxIi0L6FRzgIE5JF  curl-1.3.8-LJjwNKzepyS3xwPc0WhRjQ  data-default-0.7.1.1-7EGYJX2YWqWJRbPFUHNoCr  data-default-class-0.1.2.0-GsXqKN6o1X9jr0fF5qCVD  data-default-instances-containers-0.0.1-bob6IQGdJq92c061H46zK  data-default-instances-dlist-0.0.1-FKnZBeovJMk4M89wQxDhjl  data-default-instances-old-locale-0.0.1-9zaGDEmgOixKkmLylWdN5l  direct-sqlite-2.3.19-HHlUsN8cUcIK9krg9k4o1U  dlist-0.8.0.2-6Wnps4GD7EFnRucVzXIFD  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  hashable-1.2.5.0-F4MWeNuv2sjJRqBd2T5ul4  integer-logarithms-1.0.1-IEHCuEd5sG4JjSjlx7m5JF  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  old-locale-1.0.0.7-KGBP1BSKxH5GCm0LnZP04j  parsec-3.1.11-113irVHGgd88sRnywByDNw  primitive-0.6.1.0-6AbSTw9JXz141LE5p6LGH  program-creek-0.1.0.0-DGN7C0yILtD8rhRfCRC7fX  program-creek-0.1.0.0-FZywbXPsexWCNzWQjU4hde  regex-base-0.93.2-AYjYAsBidAc8f5XNm9b2Aa  regex-tdfa-1.2.2-1CtrRJehZW1FAGt405eZD  scalpel-0.5.0-53NeeOqRUey6DI5oxYwCc7  scalpel-core-0.5.0-BAZDvc43XisAQ4lHVvNuZK  scientific-0.3.4.10-HRQd1hS6vMV6hvjSlMi8B0  sqlite-simple-0.4.12.1-DCtyqUUCEvH1dCCCkddUj1  tagsoup-0.14-JtYVCIi2Hf68vEPeikUmIo  text-1.2.2.1-Ji7hMs2U4BkBwavd4taEVR  vector-0.11.0.0-LMwQhhnXj8U3T5Bm1JFxG
.stack-work/install/x86_64-osx/lts-8.0/8.0.2/pkgdb/: package.cache  (+1 more)
app/: Main.hs
src/: Lib.hs
(+2 files in other folders)
