name:                program-creek
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/2016rshah/program-creek#readme
license:             BSD3
license-file:        LICENSE
author:              Rushi Shah
maintainer:          2016rshah@gmail.com
copyright:           2016
category:            test
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , scalpel >= 0.5.0
                     , sqlite-simple >= 0.4.12.1
  default-language:    Haskell2010

executable program-creek-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , program-creek
                     , scalpel >= 0.5.0
                     , sqlite-simple >= 0.4.12.1
  default-language:    Haskell2010

test-suite program-creek-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , program-creek
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/2016rshah/program-creek
